--- a/src/app/creator/gameform/design/text/text.component.html
+++ b/src/app/creator/gameform/design/text/text.component.html
@@ -20,7 +20,7 @@
    
 
     <div id="text-container" class="row top-5" (cdkDropListDropped)="dragservice.dropElement($event)" cdkDropListConnectedTo="editableObject" cdkDropList>
-        <div class="col s12 textcard" *ngFor="let item of items" cdkDrag [cdkDragData]="item" (dblclick)="creator.addTextToComponent(item)">
+        <div class="col s12 textcard" *ngFor="let item of items" cdkDrag [cdkDragData]="item" (dblclick)="dragservice.addText(item)">
                 <span [ngStyle]="{'font-family': item.selectedFont, 'color': item.selectedColor, 'font-size': item.selectedSize + 'px', 'font-style': item.selectedStyle}"
                 class="card-title">{{item.content}}</span>
                <i (click)="removeText(item)" class="material-icons white-text link right">delete</i>
