--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -13,16 +13,7 @@
     class="element-item"
     cdkDrag
     cdkDragBoundary="#editableObject"
-    (cdkDragEnded)="onDragEnded($event)"
-    >
+    (cdkDragEnded)="onDragEnded($event)">
     </app-element-item>
-<div
-    id="456"
-    class="element-item"
-    cdkDrag
-    cdkDragBoundary="#editableObject"
-    (cdkDragEnded)="onDragEnded($event)"
-    style="border: 1px solid rgb(216, 27, 27); width: 50px; height: 50px;">
-    element1
-</div>
+
 </div>
