--- a/src/app/creator/gameform/design/canvas/canvas.component.css
+++ b/src/app/creator/gameform/design/canvas/canvas.component.css
@@ -24,4 +24,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
 }
