storing x & y for elements

--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -13,7 +13,7 @@
     class="element-item"
     cdkDrag
     cdkDragBoundary="#editableObject"
-    (cdkDragEnded)="onDragEnded($event)">
+    (cdkDragEnded)="dragservice.onDragEnded($event)">
     </app-element-item>
 
 </div>
