--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -7,7 +7,7 @@
       </svg>
     <i *ngIf="!drawer.closedrawer"  class="material-icons-outlined arrow">expand_more</i>
     <i *ngIf="drawer.closedrawer" class="material-icons-outlined arrow">expand_less</i></button>
-  <div id="components" class="row components-container small" (cdkDropListDropped)="dragservice.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
+  <div id="drawer" class="row components-container small" (cdkDropListDropped)="dragservice.dropElement($event)" cdkDropListConnectedTo="canvas" cdkDropList>
     <div class="component" *ngFor="let component of components | reverse" cdkDrag [cdkDragData]="component" (dblclick)="dragservice.addComponent(component)">
       <img src="{{component.imagem}}" class="component-image" alt="">
       <p>{{component.name}}</p>
