--- a/src/styles.css
+++ b/src/styles.css
@@ -666,3 +666,22 @@ h6.loginsubtitle{
     pointer-events: none;
     cursor: grab;
   }
+
+
+#editableObject{
+  position: absolute;
+  top: 17%;
+  left: 30%;
+}
+
+#background-img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;      /* Ensures the image covers the container */
+  object-position: center; /* Centers the image within the container */
+  display: block;  
+}
+
