--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -1,5 +1,6 @@
 
 <div id="canvas" cdkDropList (cdkDropListDropped)="dragservice.dropElement($event)" cdkDropListConnectedTo="components" class="design-canvas" >
+
 </div>
 
 <div id="editableObject" [ngStyle]="{'zoom': creator.zoomValue/100}" (cdkDropListDropped)="dragservice.dropElement($event)" cdkDragBoundary="#canvas" cdkDrag class="editable-object">
@@ -17,3 +18,8 @@
     </app-element-item>
 
 </div>
+
+<!-- <div style="position: absolute;top: 200px; right: 200px">
+    {{drawer.closeToolbox}}
+    {{drawer.closedrawer}}
+</div> -->
