--- a/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier/modifier.component.html
@@ -20,6 +20,7 @@
         <app-modifier-input     *ngIf="modifier.type == 'input'"    [modifier]="modifier"></app-modifier-input>
         <app-modifier-number    *ngIf="modifier.type == 'number'"   [modifier]="modifier"></app-modifier-number>
         <app-modifier-image     *ngIf="modifier.type == 'image'"    [modifier]="modifier"></app-modifier-image>
+        <app-modifier-upload    *ngIf="modifier.type == 'upload'"    [modifier]="modifier"></app-modifier-upload>
         <app-modifier-color     *ngIf="modifier.type == 'color'"    [modifier]="modifier"></app-modifier-color>
         <app-modifier-text      *ngIf="modifier.type == 'text'"     [modifier]="modifier"></app-modifier-text>
         <app-modifier-svg       *ngIf="modifier.type == 'svg'"      [modifier]="modifier"></app-modifier-svg>
