--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -19,6 +19,4 @@
 
 </div>
 
- <div style="position: absolute;top: 100px; left: 100px; display:flex; flex-direction:column">
-    <span *ngFor="let hist of history; let i = index" style="font-size:12px" >{{hist.description}}</span>
-</div> 
+<app-history-panel></app-history-panel>
