salvando imagem componente

--- a/src/app/creator/gameform/design/canvas/canvas.component.html
+++ b/src/app/creator/gameform/design/canvas/canvas.component.html
@@ -11,7 +11,7 @@
     *ngFor="let element of elements.addedElements; trackBy: trackById"
     [id]="element.id" 
     [data]="element" 
-    class="element-item"
+    class="element-item {{element.type}}"
     cdkDrag
     cdkDragBoundary="#editableObject"
     (cdkDragEnded)="dragservice.onDragEnded($event)">
