--- a/src/app/creator/gameform/regras/regras-preview/regras-preview.component.html
+++ b/src/app/creator/gameform/regras/regras-preview/regras-preview.component.html
@@ -1,4 +1,4 @@
-<h3 class="title purple-text">Resumo</h3>
+<h3 [hidden]="hideButtons" class="title purple-text">Resumo</h3>
 
 <div class="card ">
   <div class="row">
@@ -43,7 +43,7 @@
   </div>
 </div>
 
-  <div class="row">
+  <div class="row" [hidden]="hideButtons">
     <button (click)="registerForm()" class="btn green next-step">gravar e
       continuar</button>
     <a class="btn-flat purple-text right previous-step">voltar</a>
