--- a/src/app/testing/controls/controls.component.css
+++ b/src/app/testing/controls/controls.component.css
@@ -23,8 +23,10 @@
 #round-counter h1{
     font-size: 80px;
     font-family: "Foldit";
-    color: white;
+    color: rgb(6, 0, 0);
     text-align: center;
+    text-shadow:1px 1px;
+    margin-bottom:0;
 }
 
 #round-counter{
@@ -85,9 +87,25 @@
  position:absolute;
  bottom: 10vh;
  right: 5vw;
- width:20vw;
+ min-width:20vw;
  height: 20vw;
  z-index: 999;
+}
+
+#activeControl .content{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.close-button{
+    position:absolute;
+    top: 10px;
+    right: 10px;
 }
 
 #rulesbook{
