--- a/src/app/testing/players/player-item/player-item.component.html
+++ b/src/app/testing/players/player-item/player-item.component.html
@@ -1,4 +1,8 @@
-<div class="player-item" [class.active]="active" >
+<div class="player-item" [class.active]="active" [ngStyle]="{ 
+    'color': player.color, 
+    'border': '4px solid ' + player.color, 
+    'box-shadow': active ? '0 0 15px 4px #FFF' : 'none' 
+  }">
     <i class="material-icons player-avatar"  [ngStyle]="{ 'color': player.color }" >person</i>
     <span class="player-name">{{ player.name }}</span>
 </div>
