--- a/src/app/creator/gameform/design/drawer/drawer.component.css
+++ b/src/app/creator/gameform/design/drawer/drawer.component.css
@@ -78,3 +78,17 @@
     display: block;
 }
 
+.ammount-display {
+    font-size: 18px;
+    color: rgb(6, 0, 0);
+    text-align: center;
+    position: absolute;
+    top: 84px;
+    right: -9px;
+    margin: 0;
+    width: 50px;
+    height: 50px;
+    line-height: 71px;
+    text-align: center;
+    font-family: 'Barlow Condensed';
+}
