--- a/src/app/creator/gameform/design/modifiers/modifier-number/modifier-number.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier-number/modifier-number.component.html
@@ -1,2 +1,2 @@
 
-<input type="number" name="numberInput" class="browser-default" [min]="1" [max]="10" [(ngModel)]="numberInput" (ngModelChange)="onNumberInputChange($event)">
+<input type="number" name="numberInput" class="browser-default" [min]="1" [max]="modifier.max" [(ngModel)]="numberInput" (ngModelChange)="onNumberInputChange($event)">
