--- a/src/app/testing/controls/control-item/control-item.component.css
+++ b/src/app/testing/controls/control-item/control-item.component.css
@@ -17,4 +17,20 @@
 .component{
  border-radius: 15px;
  cursor: pointer;
+ position: relative;
+}
+
+.ammount-display {
+    font-size: 15px;
+    color: rgb(6, 0, 0);
+    text-align: center;
+    position: absolute;
+    top: 40px;
+    right: -9px;
+    margin: 0;
+    width: 50px;
+    height: 50px;
+    line-height: 71px;
+    text-align: center;
+    font-family: 'Barlow Condensed';
 }
