--- a/src/app/testing/controls/step-controls/step-controls.component.css
+++ b/src/app/testing/controls/step-controls/step-controls.component.css
@@ -1,7 +1,7 @@
 #step-controls{
     display: flex;
     flex-direction: row;
-    gap:10px;
-    justify-content: center;
+    gap:8px;
+    justify-content: flex-end;
     align-items: center;
 }
