--- a/src/app/testing/controls/control-item/control-item.component.css
+++ b/src/app/testing/controls/control-item/control-item.component.css
@@ -18,19 +18,15 @@
  border-radius: 15px;
  cursor: pointer;
  position: relative;
+ width: 100px;
+ z-index:10;
+ display: flex;
+ flex-direction: column;
+ align-items: center;
 }
 
-.ammount-display {
-    font-size: 15px;
-    color: rgb(6, 0, 0);
-    text-align: center;
+.ammount-container{
     position: absolute;
-    top: 40px;
-    right: -9px;
-    margin: 0;
-    width: 50px;
-    height: 50px;
-    line-height: 71px;
-    text-align: center;
-    font-family: 'Barlow Condensed';
+    top: 60px;
+    right: 14px;
 }
