--- a/src/app/testing/controls/controls.component.css
+++ b/src/app/testing/controls/controls.component.css
@@ -145,17 +145,8 @@
     font-family: 'Barlow Condensed';
 }
 
-.ammount-display {
-    font-size: 25px;
-    color: rgb(6, 0, 0);
-    text-align: center;
+.ammount-container{
     position: absolute;
-    top: 117px;
-    right: 20px;
-    margin: 0;
-    width: 50px;
-    height: 50px;
-    line-height: 71px;
-    text-align: center;
-    font-family: 'Barlow Condensed';
+    top: 152px;
+    right: 78px;
 }
