--- a/src/app/testing/controls/control-item/control-item.component.css
+++ b/src/app/testing/controls/control-item/control-item.component.css
@@ -1,6 +1,7 @@
 .component-image{
     /* width: 85px; */
-    height: 75px;
+    height: 80%;
+    width: auto;
     object-fit: contain;
     margin: 10px;
 }
@@ -18,11 +19,15 @@
  border-radius: 15px;
  cursor: pointer;
  position: relative;
- width: 100px;
+ width: 100%;
+ height: 100%;
  z-index:10;
  display: flex;
- flex-direction: column;
  align-items: center;
+}
+
+.component.not-small{
+    flex-direction: column;
 }
 
 .ammount-container{
