--- a/src/app/testing/controls/controls.component.html
+++ b/src/app/testing/controls/controls.component.html
@@ -10,15 +10,16 @@
             <i class="material-icons black-text">menu_book</i>
             <span>regras</span>
         </a>
-        <app-control-item *ngFor="let control of testing.controls" [control]="control" (click)="controlSelected(control)"></app-control-item>
+        <app-control-item *ngFor="let control of testing.controls" style="height: 100px; width:100px" [control]="control" (click)="controlSelected(control)"></app-control-item>
     </div>
 </div>
 
-<div id="activeControl" class="component center" [hidden]="!testing.activeControl" >
+<div id="activeControl" class="component center" [hidden]="!testing.activeControl" 
+ cdkDropList  [cdkDropListConnectedTo]="testing.playersID()">
     <i (click)="testing.activeControl = null" class="material-icons purple link close-button">close</i>
     <h1 *ngIf="testing.showResult" class="result-display">{{testing.result}}</h1>
-    <div class="content">
-      <img src="{{testing.activeControl?.imagem}}" class="component-image center" [ngClass]="testing.activeControl?.classname" alt="">
+    <div class="content" >
+      <img cdkDrag [cdkDragData]="testing.activeControl"  [cdkDragDisabled]="false" cdkDragPreview src="{{testing.activeControl?.imagem}}" class="component-image center" [ngClass]="testing.activeControl?.classname" alt="">
       <app-ammount-display class="ammount-container" [size]="'big'" [ammount]="testing.activeControl?.ammount"></app-ammount-display>
       <div>
         <a class="btn actionbutton" *ngFor="let action of testing.activeControl?.actions" (click)="testing.runCode(action)" >{{action.title}}</a>
