--- a/src/app/testing/shared/card-holder/card-holder.component.css
+++ b/src/app/testing/shared/card-holder/card-holder.component.css
@@ -1,10 +1,20 @@
 
 .card-holder{
-
+    display:flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 61vw;
+    height: 100%;
+    gap:5px;
+    overflow-y: hidden;
+    overflow-x: auto;
 }
 
 .close-button{
     position:absolute;
     top:5px;
-    right: -15px;
+    right: -18px;
+    z-index:99999;
 }
