--- a/src/app/testing/shared/card-holder/card-holder.component.html
+++ b/src/app/testing/shared/card-holder/card-holder.component.html
@@ -1,4 +1,4 @@
-<div class="card-holder">
+<div class="card-holder" cdkDropList [cdkDropListData]="deck.cards">
     <i (click)="closeCards()" class="material-icons rounded white link close-button">close</i>
-    <app-card *ngFor="let card of cards" [isSmall]="true" [closed]="true" [card]="card"></app-card>
+    <app-card cdkDrag *ngFor="let card of deck.cards" [isSmall]="true" [closed]="true" [card]="card" [deck]="deck"></app-card>
 </div>
