--- a/src/app/testing/shared/card-holder/card/card.component.css
+++ b/src/app/testing/shared/card-holder/card/card.component.css
@@ -18,8 +18,8 @@
 .playingcard{
  cursor: pointer;
  position: relative;
- width: 25vw; 
- height: 80vh; 
+ width: 20vw; 
+ height: 65vh; 
  z-index:10;
  display: flex;
  align-items: center;
@@ -42,6 +42,8 @@
     padding: 3px;
     z-index: 11;
     opacity: 0.2;
+    font-size: 10px;
+    border-radius: 10px;
 }
 
 .playingcard-action{
