--- a/src/app/testing/shared/card-holder/card-holder.component.html
+++ b/src/app/testing/shared/card-holder/card-holder.component.html
@@ -1,4 +1,5 @@
 <div class="card-holder" cdkDropList [cdkDropListData]="deck.cards">
     <i (click)="closeCards()" class="material-icons rounded white link close-button">close</i>
-    <app-card cdkDrag *ngFor="let card of deck.cards" [isSmall]="true" [closed]="true" [card]="card" [deck]="deck"></app-card>
+    <i class="material-symbols-outlined rounded white link drag-button">drag_pan</i>
+    <app-card cdkDrag *ngFor="let card of deck.cards" (closeEvent)="handleCardClosed($event)" [isSmall]="true" [closed]="true" [card]="card" [deck]="deck"></app-card>
 </div>
