--- a/src/app/testing/controls/controls.component.html
+++ b/src/app/testing/controls/controls.component.html
@@ -15,11 +15,17 @@
 </div>
 
 <div id="activeControl" class="component center" [hidden]="!testing.activeControl" 
- cdkDropList  [cdkDropListConnectedTo]="testing.playersID()">
+ cdkDropList cdkDrag [cdkDropListConnectedTo]="testing.playersID()">
     <i (click)="testing.activeControl = null" class="material-icons rounded white link close-button">close</i>
     <h1 *ngIf="testing.showResult" class="result-display">{{testing.result}}</h1>
     <div class="content" >
-      <img cdkDrag [cdkDragData]="testing.activeControl"  [cdkDragDisabled]="false" cdkDragPreview src="{{testing.activeControl?.imagem}}" class="component-image center" [ngClass]="testing.activeControl?.classname" alt="">
+          <img cdkDrag [cdkDragData]="testing.activeControl"  [cdkDragDisabled]="false" cdkDragPreview src="{{testing.activeControl?.imagem}}" class="component-image center" [ngClass]="testing.activeControl?.classname" alt="">
+          <img *ngIf="testing.actionPlay" src="{{testing.activeControl?.imagem}}" class="component-image center " [ngClass]="[testing.activeControl ? testing.activeControl.classname : '', testing.actionPlay ? testing.actionPlay : '']" alt="">
+          <img *ngIf="testing.actionPlay" src="{{testing.activeControl?.imagem}}" class="component-image center " [ngClass]="[testing.activeControl ? testing.activeControl.classname : '', testing.actionPlay ? testing.actionPlay : '']" alt="">
+          <img *ngIf="testing.actionPlay" src="{{testing.activeControl?.imagem}}" class="component-image center " [ngClass]="[testing.activeControl ? testing.activeControl.classname : '', testing.actionPlay ? testing.actionPlay : '']" alt="">
+          <img *ngIf="testing.actionPlay" src="{{testing.activeControl?.imagem}}" class="component-image center " [ngClass]="[testing.activeControl ? testing.activeControl.classname : '', testing.actionPlay ? testing.actionPlay : '']" alt="">
+          <img *ngIf="testing.actionPlay" src="{{testing.activeControl?.imagem}}" class="component-image center " [ngClass]="[testing.activeControl ? testing.activeControl.classname : '', testing.actionPlay ? testing.actionPlay : '']" alt="">
+      
       <app-ammount-display class="ammount-container" [size]="'big'" [ammount]="testing.activeControl?.ammount"></app-ammount-display>
       <div>
         <a class="btn actionbutton" *ngFor="let action of testing.activeControl?.actions" (click)="testing.runCode(action)" >{{action.title}}</a>
