--- a/src/app/testing/shared/card-holder/card-holder.component.css
+++ b/src/app/testing/shared/card-holder/card-holder.component.css
@@ -15,6 +15,13 @@
 .close-button{
     position:absolute;
     top:5px;
-    right: -18px;
+    right: -28px;
+    z-index:99999;
+}
+
+.drag-button{
+    position:absolute;
+    top:40px;
+    right: -28px;
     z-index:99999;
 }
