--- a/src/app/testing/shared/card-holder/card/card.component.css
+++ b/src/app/testing/shared/card-holder/card/card.component.css
@@ -26,6 +26,7 @@
  flex-direction: column;
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.7);
  overflow: hidden;
+ border-radius: 10px;
 }
 
 .playingcard-actions{
