--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,7 +1,7 @@
 <div class="overlay">
     <div class="container">
       <h5 class="valign logintitle col s12 left top-10 left-2">
-        <i class="material-icons left ">shopping_basket</i>CHECKOUT</h5>
+        <i class="material-icons notranslate left ">shopping_basket</i>CHECKOUT</h5>
     </div>
   
     <div class="row container top-3">
