--- a/src/app/creator/gameform/componentes/itemdisplay/itemdisplay.component.html
+++ b/src/app/creator/gameform/componentes/itemdisplay/itemdisplay.component.html
@@ -34,7 +34,7 @@
           </div>
         </div>
         <p class="valign-wrapper" *ngIf="item.customize">
-          <i class="material-icons green-text valign">check</i> <span class="valign">Customizável</span>
+          <i class="material-icons notranslate green-text valign">check</i> <span class="valign">Customizável</span>
         </p>
       </div>
       <div class="row valign-wrapper">
