--- a/src/app/creator/gameform/design/drawer/drawer.component.html
+++ b/src/app/creator/gameform/design/drawer/drawer.component.html
@@ -13,7 +13,7 @@
       <h6 class="ammount-display" *ngIf="component.ammount > 1" >x{{component.ammount}}</h6>
 
       <p>{{component.name}}</p>
-      <i (click)="removeComponent(component)" class="material-icons white-text link right">delete</i>
+      <i (click)="removeComponent(component)" class="material-icons notranslate white-text link right">delete</i>
     </div>
   </div>
 </div>
