--- a/src/app/creator/gameform/design/modifiers/modifier-actions/modifier-actions.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier-actions/modifier-actions.component.html
@@ -5,7 +5,7 @@
   </div>
     <app-prompt-input [hideSpinner]="hideSpinner" [label]="'gerar com IA'"  [code]="action.code" (output)="generateCode($event, action)" [prompt]="action.prompt"></app-prompt-input>
     <a (click)="testCode(action)" [ngClass]="{ 'disabled': !action.code }"  class="btn col s12 top-3 green valign-wrapper">
-      <i class="material-icons valign">play_circle</i>
+      <i class="material-icons notranslate valign">play_circle</i>
       <span class="valign"> testar ação</span>
       </a>
   </div>
