--- a/src/app/creator/gameform/jogo/jogo-tema/jogo-tema.component.html
+++ b/src/app/creator/gameform/jogo/jogo-tema/jogo-tema.component.html
@@ -17,7 +17,7 @@
     
     <div class="row">
      <button (click)="registerForm()" [disabled]="jogoFormGroup.invalid" class="btn green right next-step">
-    <i *ngIf="!hideSpinner" class="material-icons spinner sufix valign right-1">autorenew</i>
+    <i *ngIf="!hideSpinner" class="material-icons notranslate spinner sufix valign right-1">autorenew</i>
       
       próximo</button>
    </div>
