--- a/src/app/creator/home-creator/home-creator.component.html
+++ b/src/app/creator/home-creator/home-creator.component.html
@@ -13,7 +13,7 @@
             <div class="imgcontainer">
                 <img src="{{game.logo}}" alt="">
             </div>
-            <span>{{game.titulo}}</span>
+            <span class="notranslate">{{game.titulo}}</span>
         </div>
     </div>
 </div>
