--- a/src/app/creator/shared/text-editor/text-editor.component.html
+++ b/src/app/creator/shared/text-editor/text-editor.component.html
@@ -8,5 +8,5 @@
     <app-ai-button label="gerar com IA" (click)="generateText(textinput.value)"></app-ai-button> 
     
     <a (click)="registerText(textinput.value)" class="btn col s12 top-3 blue darken-1 valign-wrapper">
-            <i class="material-icons valign">save</i>
+            <i class="material-icons notranslate valign">save</i>
             salvar</a>
