--- a/src/app/creator/ui/zoom/zoom.component.html
+++ b/src/app/creator/ui/zoom/zoom.component.html
@@ -1,7 +1,7 @@
 <div class=" zoom valign-wrapper">
-    <i class="material-icons col s2 decrease valign">search</i>
+    <i class="material-icons notranslate col s2 decrease valign">search</i>
     <p class="range-field col s6 valign">
         <input type="range" (input)="changeZoom($event.target.value)" (change)="changeZoom($event.target.value)" [value]="value"  min="10" max="300" step="5"  />
     </p>
-    <i class="material-icons col s2 increase valign">search</i>
+    <i class="material-icons notranslate col s2 increase valign">search</i>
 </div>
