--- a/src/app/home/hero/hero.component.html
+++ b/src/app/home/hero/hero.component.html
@@ -2,6 +2,6 @@
   <div class="col s12 center">
     <img src="assets/img/logo.png" class="responsive-img">
     <h2 class="center white-text ">Seu boardgame personalizado!</h2>
-    <i class="material-icons white-text link"  [ngxScrollTo]="'#sobre'"  id="down-btn">arrow_drop_down</i>
+    <i class="material-icons notranslate white-text link"  [ngxScrollTo]="'#sobre'"  id="down-btn">arrow_drop_down</i>
   </div>
 </div>
