--- a/src/app/creator/gameform/design/elements/elements.component.html
+++ b/src/app/creator/gameform/design/elements/elements.component.html
@@ -3,7 +3,7 @@
     <div class="top-5">
         <button class="tab-button" [ngClass]="{'active': activeTab == 'edit'}"  (click)="activeTab = 'edit'">prompt</button>
         <button class="tab-button" [ngClass]="{'active': activeTab == 'upload'}"  (click)=" activeTab = 'upload'">upload</button>
-        <i *ngIf="activeTab != ''" class="material-icons link right grey-text" style="font-size: 17px;" (click)="activeTab = ''">close</i>
+        <i *ngIf="activeTab != ''" class="material-icons notranslate link right grey-text" style="font-size: 17px;" (click)="activeTab = ''">close</i>
     </div>
 
     <div class="row top-5 text-container" [hidden]="activeTab != 'upload'">
