--- a/src/app/creator/gameform/design/modifiers/modifier-svg/modifier-svg.component.html
+++ b/src/app/creator/gameform/design/modifiers/modifier-svg/modifier-svg.component.html
@@ -4,18 +4,18 @@
         <input id="color" type="color" [(ngModel)]="modifier.data.selectedColor" (change)="changeColor($event.target.value)"  name="color">
     </div>
     <div class=" zoom valign-wrapper">
-        <i class="material-icons col s2 valign grey-text">rotate_right</i>
+        <i class="material-icons notranslate col s2 valign grey-text">rotate_right</i>
         <p class="range-field col s6 valign">
             <input type="range" (input)="changeRotation($event.target.value)" (change)="changeRotation($event.target.value)" [value]="modifier.data.rotation"  min="-180" max="180" step="2"  />
         </p>
-        <i class="material-icons col s2 valign grey-text">rotate_left</i>
+        <i class="material-icons notranslate col s2 valign grey-text">rotate_left</i>
     </div>
 
     <div class=" zoom valign-wrapper">
-        <i class="material-icons col s2 valign grey-text">photo_size_select_small</i>
+        <i class="material-icons notranslate col s2 valign grey-text">photo_size_select_small</i>
         <p class="range-field col s6 valign">
             <input type="range" (input)="changeSize($event.target.value)" (change)="changeSize($event.target.value)" [value]="modifier.data.size"  min="10" max="200" step="2"  />
         </p>
-        <i class="material-icons col s2 valign grey-text">photo_size_select_large</i>
+        <i class="material-icons notranslate col s2 valign grey-text">photo_size_select_large</i>
     </div>
 </div>
