--- a/src/app/creator/gameform/design/text/text.component.html
+++ b/src/app/creator/gameform/design/text/text.component.html
@@ -3,7 +3,7 @@
     <div class="top-5">
         <button class="tab-button" [ngClass]="{'active': activeTab == 'edit'}"  (click)="activeTab = 'edit'">editar</button>
         <button class="tab-button" [ngClass]="{'active': activeTab == 'upload'}"  (click)=" activeTab = 'upload'">upload</button>
-        <i *ngIf="activeTab != ''" class="material-icons link right grey-text" style="font-size: 17px;" (click)="activeTab = ''">close</i>
+        <i *ngIf="activeTab != ''" class="material-icons notranslate link right grey-text" style="font-size: 17px;" (click)="activeTab = ''">close</i>
     </div>
 
     <div class="row top-5 text-container" [hidden]="activeTab != 'upload'">
@@ -23,7 +23,7 @@
         <div class="col s12 textcard" *ngFor="let item of items" cdkDrag [cdkDragData]="item" (dblclick)="dragservice.addText(item)">
                 <span [ngStyle]="{'font-family': item.selectedFont, 'color': item.selectedColor, 'font-size': item.selectedSize + 'px', 'font-style': item.selectedStyle}"
                 class="card-title">{{item.content}}</span>
-               <i (click)="removeText(item)" class="material-icons white-text link right">delete</i>
+               <i (click)="removeText(item)" class="material-icons notranslate white-text link right">delete</i>
 
         </div>
     </div>
