--- a/src/app/creator/gameform/design/uploads/uploads.component.html
+++ b/src/app/creator/gameform/design/uploads/uploads.component.html
@@ -10,7 +10,7 @@
         <div class="col s4 preview-container top-1" *ngFor="let upload of uploads" cdkDrag [cdkDragData]="upload" (dblclick)="dragservice.addImage(upload.url);">
           <div class="preview-content"  [ngStyle]="{'background-image': 'url('+upload.url+')'}"></div>
            <div class="tools-container">
-               <i (click)="removeUpload(upload)" class="material-icons white-text link right">delete</i>
+               <i (click)="removeUpload(upload)" class="material-icons notranslate white-text link right">delete</i>
            </div>
         </div>
     </div>
