--- a/src/app/creator/ui/listitem/listitem.component.html
+++ b/src/app/creator/ui/listitem/listitem.component.html
@@ -2,7 +2,7 @@
 <li class="row">
   <p class="col m10 list" >{{listValue}}</p>
   <div class="col m2" >
-    <i class="material-icons link pink-text" (click)="edit()">edit</i>
-    <i class="material-icons link pink-text" (click)="delete()">delete</i>
+    <i class="material-icons notranslate link pink-text" (click)="edit()">edit</i>
+    <i class="material-icons notranslate link pink-text" (click)="delete()">delete</i>
   </div>
 </li>
