--- a/src/app/creator/ui/numericstepper/numericstepper.component.html
+++ b/src/app/creator/ui/numericstepper/numericstepper.component.html
@@ -2,13 +2,13 @@
   <a [class.pulse]="mouseOvered1" [class.disabled]="item.quantidade == 1" (mouseover)="mouseOvered1=true" (mouseout)="mouseOvered1=false"
     class="btn-floating purple link ">
     <i (click)="item.quantidade = item.quantidade - 1; emitChange()"
-      class="material-icons  white-text   ">remove</i>
+      class="material-icons notranslate  white-text   ">remove</i>
   </a>
 </div>
 <input type="number" inputmode="numeric" pattern="[0-9]*" class="col s4 inputnum purple-text"
   value="{{item.quantidade}}">
 <div class="col s4 left-align"> <a [class.pulse]="mouseOvered" (mouseover)="mouseOvered=true"
     (mouseout)="mouseOvered=false" class="btn-floating  purple link ">
-    <i (click)="item.quantidade = item.quantidade + 1; emitChange()" class="material-icons white-text ">add</i>
+    <i (click)="item.quantidade = item.quantidade + 1; emitChange()" class="material-icons notranslate white-text ">add</i>
   </a>
 </div>
