--- a/src/app/home/destaques/destaques.component.html
+++ b/src/app/home/destaques/destaques.component.html
@@ -6,7 +6,7 @@
           <img src="{{item.image}}">
         </div>
         <div class="card-content">
-          <span class="card-title">{{item.title}}</span>
+          <span class="card-title notranslate">{{item.title}}</span>
           <p>{{item.description}}</p>
         </div>
         <div class="card-action">
