--- a/src/app/home/resources/resources.component.html
+++ b/src/app/home/resources/resources.component.html
@@ -5,7 +5,7 @@
       <div class="col s12 m4 block" *ngFor="let block of section.blocks">
         <div class="icon-block">
           <h2 class="center customcolor2">
-            <h2 class="center"><i class="large center customcolor2 material-icons" aria-hidden="true">{{block.icon}}</i>
+            <h2 class="center"><i class="large center customcolor2 material-icons notranslate " aria-hidden="true">{{block.icon}}</i>
             </h2>
           </h2>
           <h5 [style.font-family]="website?.font?.family" [style.font-family]="website?.font?.family" class="center">
