--- a/src/app/testing/controls/controls.component.css
+++ b/src/app/testing/controls/controls.component.css
@@ -181,7 +181,28 @@
     }
   }
 
+  .pick{
+    position: absolute;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    transform-origin: center center;
+    animation: deal-center 1s ease-in-out forwards;
+  }
 
+   /* Second and fifth card dealt to the center 
+   .pick:nth-child(1) {
+    z-index: 5;
+    animation-delay: 0s;
+    animation-name: deal-center;
+  }
+
+    .pick:nth-child(2),
+    .pick:nth-child(3),
+    .pick:nth-child(4),
+    .pick:nth-child(5),
+    .pick:nth-child(6){
+    display:none;
+  }
+*/
   .deal {
     position: absolute;
     box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
