--- a/src/app/testing/controls/controls.component.html
+++ b/src/app/testing/controls/controls.component.html
@@ -7,7 +7,7 @@
     </div>
     <div id="controls-container">
         <a (click)="openRules()" id="rulesbook"> 
-            <i class="material-icons black-text">menu_book</i>
+            <i class="material-icons notranslate black-text">menu_book</i>
             <span>regras</span>
         </a>
         <app-control-item *ngFor="let control of testing.controls" style="height: 100px; width:100px" [control]="control" (click)="controlSelected(control)"></app-control-item>
@@ -16,7 +16,7 @@
 
 <div id="activeControl" class="component center" [hidden]="!testing.activeControl" 
  cdkDropList cdkDrag [cdkDropListConnectedTo]="testing.playersID()">
-    <i (click)="testing.activeControl = null" class="material-icons rounded white link close-button">close</i>
+    <i (click)="testing.activeControl = null" class="material-icons notranslate rounded white link close-button">close</i>
     <h1 *ngIf="testing.showResult" class="result-display">{{testing.result}}</h1>
     <div class="content" >
           <img cdkDrag [cdkDragData]="testing.activeControl"  [cdkDragDisabled]="false" cdkDragPreview src="{{testing.activeControl?.imagem}}" class="component-image center" [ngClass]="testing.activeControl?.classname" alt="">
