--- a/src/app/testing/controls/step-controls/step-controls.component.html
+++ b/src/app/testing/controls/step-controls/step-controls.component.html
@@ -3,9 +3,11 @@
         <i class="material-symbols-outlined" [ngClass]="testing.playerOrder ? 'black-text' : 'blue-text'" (click)="reverseOrder()">swap_horiz</i>
     </a>
     <a class="step-button link">
-        <i class="material-symbols-outlined black-text" (click)="nextPlayert()">fast_forward</i>
+        <i class="material-symbols-outlined 
+ notranslate black-text" (click)="nextPlayert()">fast_forward</i>
     </a>
     <a class="step-button link">
-        <i class="material-symbols-outlined black-text" (click)="nextRound()">skip_next</i>
+        <i class="material-symbols-outlined 
+ notranslate black-text" (click)="nextRound()">skip_next</i>
     </a>
 </div>
